Update location settings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="tweet_title">Android Tweets near %1$s</string>
-    <string name="title_activity_maps">Map</string>
+    <string name="title_activity_choose_location">Choose a Location</string>
 </resources>
